# optimiser

./: CHANGELOG.md  Cargo.toml  OPTIMISER_CONCEPTS.md  SETUP.bat  app.py  install_local.bat  install_optimiser.bat  make_comparison.py  oi.bat  pyproject.toml  release-notes.md  start_optimiser.bat  test_report.py  test_report_result.json  use_with_claude.bat
.github/workflows/: ci.yml  eval.yml  pr-health.yml
crates/headroom-parity/: Cargo.toml
crates/headroom-proxy/: Cargo.toml
crates/optimiser-core/: Cargo.toml
crates/optimiser-py/: Cargo.toml
crates/optimiser-py/src/: lib.rs
optimiser/: __init__.py  _version.py  cli.py  client.py  compress.py  config.py  copilot_auth.py  exceptions.py  hooks.py  pipeline.py  shared_context.py  update_check.py
optimiser/cache/: __init__.py  anthropic.py  compression_store.py  dynamic_detector.py  semantic.py
optimiser/ccr/: mcp_server.py  response_handler.py
optimiser/cli/: __init__.py  agent_savings.py  audit.py  capture.py  copilot_auth.py  doctor.py  evals.py  init.py  install.py  learn.py  main.py  mcp.py  perf.py  proxy.py  start.py  toin_publish.py  tools.py  update.py  wrap.py
optimiser/compression/: __init__.py  universal.py
optimiser/dashboard/: live.py
optimiser/evals/: __init__.py  __main__.py  adversarial_grid.py  batch_compression_eval.py  core.py  datasets.py  html_extraction.py  html_oss_benchmarks.py  metrics.py  prompt_comparison.py  session_probes.py  suite_runner.py
optimiser/graph/: watcher.py
optimiser/image/: __init__.py  compressor.py  onnx_router.py  trained_router.py
(+200 files in other folders)
